--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 
       <a href="index.html" class="logo d-flex align-items-center me-auto me-xl-0">
         <!-- Uncomment the line below if you also wish to use an image logo -->
-        <!-- <img src="assets/img/logo.png" alt=""> -->
-        <h1 class="sitename">Append</h1><span>.</span>
+        <img src="assets/img/logo1.png" alt="">
+        <h1 class="sitename">Meiji</h1><span>.</span>
       </a>
 
       <nav id="navmenu" class="navmenu">
