--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <!-- Hero Section -->
     <section id="hero" class="hero section">
 
-      <img src="assets/img/hero-bg.jpg" alt="" data-aos="fade-in">
+      <img src="assets/img/hero-bg6.jpg" alt="" data-aos="fade-in">
 
       <!-- <div class="container">
         <div class="row">
@@ -109,33 +109,33 @@
         </div>
 
         <div class="row gy-4 mt-5 justify-content-center aos-init aos-animate" data-aos="fade-up" data-aos-delay="200">
-          <div class="col-xl-2 col-md-4 aos-init aos-animate" >
-            <div class="icon-box" data-aos="fade-up" data-aos-delay="300">
-              <i class="bi bi-binoculars"></i>
+          <div class="col-xl-2 col-md-4 aos-init aos-animate " >
+            <div class="icon-box bg-black bg-opacity-25" data-aos="fade-up" data-aos-delay="300">
+              <i class="bi bi-lightbulb"></i>
               <h3 style="font-size: 1.6em;"><a href="">Inovação</a></h3>
             </div>
           </div>
           <div class="col-xl-2 col-md-4 aos-init aos-animate">
-            <div class="icon-box"  data-aos="fade-up" data-aos-delay="400">
-              <i class="bi bi-bullseye"></i>
+            <div class="icon-box bg-black bg-opacity-25"  data-aos="fade-up" data-aos-delay="400">
+              <i class="bi bi-shield-lock"></i>
               <h3 style="font-size: 1.6em;"><a href="">Segurança</a></h3>
             </div>
           </div>
           <div class="col-xl-2 col-md-4 aos-init aos-animate" >
-            <div class="icon-box" data-aos="fade-up" data-aos-delay="500">
-              <i class="bi bi-fullscreen-exit"></i>
+            <div class="icon-box bg-black bg-opacity-25" data-aos="fade-up" data-aos-delay="500">
+              <i class="bi bi-people"></i>
               <h3 style="font-size: 1.6em;"><a href="">Inclusão</a></h3>
             </div>
           </div>
           <div class="col-xl-2 col-md-4 aos-init aos-animate" >
-            <div class="icon-box" data-aos="fade-up" data-aos-delay="600">
-              <i class="bi bi-card-list"></i>
+            <div class="icon-box bg-black bg-opacity-25" data-aos="fade-up" data-aos-delay="600">
+              <i class="bi bi-bezier"></i>
               <h3 style="font-size: 1.24em;"><a href="">Operações Estruturadas</a></h3>
             </div>
           </div>
           <div class="col-xl-2 col-md-4 aos-init aos-animate" >
-            <div class="icon-box" data-aos="fade-up" data-aos-delay="700">
-              <i class="bi bi-gem"></i>
+            <div class="icon-box bg-black bg-opacity-25" data-aos="fade-up" data-aos-delay="700">
+              <i class="bi bi-bullseye"></i>
               <h3 style="font-size: 1.24em;"><a href="">Transparência</a></h3>
             </div>
           </div>
@@ -146,7 +146,7 @@
     </section><!-- /Hero Section -->
 
     <!-- Clients Section -->
-    <section id="clients" class="clients section">
+    <!-- <section id="clients" class="clients section">
 
       <div class="container" data-aos="fade-up">
 
@@ -154,33 +154,34 @@
 
           <div class="col-xl-2 col-md-3 col-6 client-logo">
             <img src="assets/img/clients/client-1.png" class="img-fluid" alt="">
-          </div><!-- End Client Item -->
+          </div>
 
           <div class="col-xl-2 col-md-3 col-6 client-logo">
             <img src="assets/img/clients/client-2.png" class="img-fluid" alt="">
-          </div><!-- End Client Item -->
+          </div>
 
           <div class="col-xl-2 col-md-3 col-6 client-logo">
             <img src="assets/img/clients/client-3.png" class="img-fluid" alt="">
-          </div><!-- End Client Item -->
+          </div>
 
           <div class="col-xl-2 col-md-3 col-6 client-logo">
             <img src="assets/img/clients/client-4.png" class="img-fluid" alt="">
-          </div><!-- End Client Item -->
+          </div>
 
           <div class="col-xl-2 col-md-3 col-6 client-logo">
             <img src="assets/img/clients/client-5.png" class="img-fluid" alt="">
-          </div><!-- End Client Item -->
+          </div>
 
           <div class="col-xl-2 col-md-3 col-6 client-logo">
             <img src="assets/img/clients/client-6.png" class="img-fluid" alt="">
-          </div><!-- End Client Item -->
+          </div>
 
         </div>
 
       </div>
 
-    </section><!-- /Clients Section -->
+    </section> -->
+    <!-- /Clients Section -->
 
     <!-- About Section -->
     <section id="about" class="about section">
@@ -296,9 +297,9 @@
 
           <div class="col-lg-6 " data-aos="fade-up" data-aos-delay="100">
             <div class="service-item d-flex">
-              <div class="icon flex-shrink-0"><i class="bi bi-briefcase"></i></div>
+              <div class="icon flex-shrink-0"><i class="bi bi-cash-coin"></i></div>
               <div>
-                <h4 class="title"><a href="services-details.html" class="stretched-link">Aquisição de Ativos</a></h4>
+                <h4 class="title"><a href="#" class="stretched-link">Aquisição de Ativos</a></h4>
                 <p class="description">Compramos direitos creditórios, oferecendo liquidez imediata e soluções financeiras personalizadas</p>
               </div>
             </div>
@@ -307,9 +308,9 @@
 
           <div class="col-lg-6 " data-aos="fade-up" data-aos-delay="200">
             <div class="service-item d-flex">
-              <div class="icon flex-shrink-0"><i class="bi bi-card-checklist"></i></div>
+              <div class="icon flex-shrink-0"><i class="bi bi-arrow-down-up"></i></div>
               <div>
-                <h4 class="title"><a href="services-details.html" class="stretched-link">Securitização de Recebíveis</a></h4>
+                <h4 class="title"><a href="#" class="stretched-link">Securitização de Recebíveis</a></h4>
                 <p class="description">Transformamos seus recebíveis em instrumentos financeiros negociáveis, proporcionando capital de giro para sua empresa</p>
               </div>
             </div>
@@ -317,9 +318,9 @@
 
           <div class="col-lg-6 " data-aos="fade-up" data-aos-delay="300">
             <div class="service-item d-flex">
-              <div class="icon flex-shrink-0"><i class="bi bi-bar-chart"></i></div>
+              <div class="icon flex-shrink-0"><i class="bi bi-bezier"></i></div>
               <div>
-                <h4 class="title"><a href="services-details.html" class="stretched-link">Operações Estruturadas</a></h4>
+                <h4 class="title"><a href="#" class="stretched-link">Operações Estruturadas</a></h4>
                 <p class="description">Estruturamos operações financeiras complexas, com garantias de bens alienados e liquidação de recebíveis</p>
               </div>
             </div>
@@ -327,9 +328,9 @@
 
           <div class="col-lg-6 " data-aos="fade-up" data-aos-delay="400">
             <div class="service-item d-flex">
-              <div class="icon flex-shrink-0"><i class="bi bi-binoculars"></i></div>
+              <div class="icon flex-shrink-0"><i class="bi bi-graph-up-arrow"></i></div>
               <div>
-                <h4 class="title"><a href="services-details.html" class="stretched-link">Gestão de Ativos</a></h4>
+                <h4 class="title"><a href="#" class="stretched-link">Gestão de Ativos</a></h4>
                 <p class="description">Oferecemos consultoria especializada para ajudar na tomada de decisões estratégicas e na otimização de recursos financeiros</p>
               </div>
             </div>
@@ -337,9 +338,9 @@
 
           <div class="col-lg-6 " data-aos="fade-up" data-aos-delay="500">
             <div class="service-item d-flex">
-              <div class="icon flex-shrink-0"><i class="bi bi-brightness-high"></i></div>
+              <div class="icon flex-shrink-0"><i class="bi bi-collection"></i></div>
               <div>
-                <h4 class="title"><a href="services-details.html" class="stretched-link">Financiamento de Projetos</a></h4>
+                <h4 class="title"><a href="#" class="stretched-link">Financiamento de Projetos</a></h4>
                 <p class="description">Proporcionamos soluções de funding para projetos específicos, garantindo os recursos necessários para seu desenvolvimento e sucesso</p>
               </div>
             </div>
@@ -347,9 +348,9 @@
 
           <div class="col-lg-6 " data-aos="fade-up" data-aos-delay="600">
             <div class="service-item d-flex">
-              <div class="icon flex-shrink-0"><i class="bi bi-calendar4-week"></i></div>
+              <div class="icon flex-shrink-0"><i class="bi bi-piggy-bank"></i></div>
               <div>
-                <h4 class="title"><a href="services-details.html" class="stretched-link">Consultoria Financeira</a></h4>
+                <h4 class="title"><a href="#" class="stretched-link">Consultoria Financeira</a></h4>
                 <p class="description">Oferecemos consultoria especializada para ajudar na tomada de decisões estratégicas e na otimização de recursos financeiros</p>
               </div>
             </div>
@@ -1165,17 +1166,17 @@
         </div>
 
         <div class="col-lg-2 col-6 footer-links">
-          <h4>Useful Links</h4>
+          <h4>Links Úteis</h4>
           <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About us</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Terms of service</a></li>
-            <li><a href="#">Privacy policy</a></li>
+            <li><a href="index.html#hero">Home</a></li>
+            <li><a href="index.html#about">Quem somos</a></li>
+            <li><a href="index.html#services">Serviços</a></li>
+            <li><a href="index.html#team">Nosso time</a></li>
+            <li><a href="#">WhatsApp</a></li>
           </ul>
         </div>
 
-        <div class="col-lg-2 col-6 footer-links">
+        <!-- <div class="col-lg-2 col-6 footer-links">
           <h4>Our Services</h4>
           <ul>
             <li><a href="#">Web Design</a></li>
@@ -1184,14 +1185,14 @@
             <li><a href="#">Marketing</a></li>
             <li><a href="#">Graphic Design</a></li>
           </ul>
-        </div>
+        </div> -->
 
         <div class="col-lg-3 col-md-12 footer-contact text-center text-md-start">
-          <h4>Contact Us</h4>
-          <p>A108 Adam Street</p>
+          <h4>Contate-nos</h4>
+          <!-- <p>A108 Adam Street</p>
           <p>New York, NY 535022</p>
-          <p>United States</p>
-          <p class="mt-4"><strong>Phone:</strong> <span>+1 5589 55488 55</span></p>
+          <p>United States</p> -->
+          <p class="mt-4"><strong>Telefone:</strong> <span>+55 (11) 00000-0000</span></p>
           <p><strong>Email:</strong> <span>contato@meiji.com</span></p>
         </div>
 
